# iterativect

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
assets/: dicom_data_dict.txt
src/: data_set.h  dicom_tcia_loader.cpp  dicom_tcia_loader.h  helpers.cpp  helpers.h  kernels.cu  kernels.h  main.cpp  msirt.cpp  msirt.h  recon_params.h  system_geom.cpp  system_geom.h  utils.cpp  utils.h
